@@ -5,7 +5,8 @@ Changelog
 1.5.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add a new field on news items which can be used to define a custom external
+  url (useful for mobile apps). [mbaechtold]
 
 
 1.5.0 (2017-01-11)
